--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,5 @@ yarn-error.log*
 # Contentlayer
 .contentlayer
 
-# /lib
-/app/tag-data.json
-/app/category-data.json
-/app/categoryList-data.json
+# /app
+/app/*.json
