--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "run": "^1.5.0",
     "tailwindcss": "^3.3.3",
     "unist-util-visit": "^4.1.0",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
